k8s/redis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: data-ns
spec:
  selector:
    app: redis
  ports:
    - port: 6379
